--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>Dominic Jones</h1>
     <h2>Full stack engineer</h2>
     <p>
-        I am a full stack engineer with over nine years of experience. I have delivered high-impact projects for government orgs, start-ups, SMEs, and big tech. I
+        With over nine years of experience I have delivered high-impact projects for government orgs, start-ups, SMEs, and big tech. I
         am experienced in backend and frontend development as well as cloud technologies to build scalable, event-driven microservices.
     </p>
     <ul>
         <li><a href="https://github.com/haakym">Github</a></li>
         <li><a href="https://stackoverflow.com/users/648247/haakym">Stack Overflow</a></li>
+        <li><a href="/dominic-jones-cv-2023.pdf">Download my CV</a></li>
     </ul>
 </body>
 </html>
