--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dominic Jones' profile</title>
-</head>
-<body>
-    <h1>Dominic Jones</h1>
-    <h2>Full stack engineer</h2>
-    <p>
-        With over nine years of experience I have delivered high-impact projects for government orgs, start-ups, SMEs, and big tech. I
-        am experienced in backend and frontend development as well as cloud technologies to build scalable, event-driven microservices.
-    </p>
-    <ul>
-        <li><a href="https://github.com/haakym">Github</a></li>
-        <li><a href="https://stackoverflow.com/users/648247/haakym">Stack Overflow</a></li>
-        <li><a href="/dominic-jones-cv-2023.pdf">Download my CV</a></li>
-    </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <title>Dominic Jones Developer Profile</title>
+  </head>
+  <body class="bg-gray-200">
+    <header class="bg-white p-8">
+      <h1 class="text-3xl font-bold text-gray-800">Dominic Jones</h1>
+      <p class="text-sm text-gray-600">Full stack engineer</p>
+    </header>
+    <main class="p-8">
+      <section class="mb-8">
+        <h2 class="text-lg font-bold text-gray-800 mb-2">About Me</h2>
+        <p class="text-gray-700">
+            With over nine years of experience I have delivered high-impact projects for government orgs, start-ups, SMEs, and big tech. I
+            am experienced in backend and frontend development as well as cloud technologies to build scalable, event-driven microservices.
+        </p>
+      </section>
+      <section>
+        <h2 class="text-lg font-bold text-gray-800 mb-2">Links</h2>
+        <ul class="list-none">
+          <li class="text-gray-700 mb-2">
+            <a href="https://github.com/haakym" class="underline hover:no-underline">Github</a>
+          </li>
+          <li class="text-gray-700 mb-2">
+            <a href="https://stackoverflow.com/users/648247/haakym" class="underline hover:no-underline">Stack Overflow</a>
+          </li>
+          <li class="text-gray-700 mb-2">
+            <a href="/dominic-jones-cv-2023.pdf" class="underline hover:no-underline">View my CV</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
